# ChangeLog for app-editors/gvim
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/gvim/ChangeLog,v 1.255 2007/11/09 22:26:57 nixnut Exp $

  09 Nov 2007; nixnut <nixnut@gentoo.org> gvim-7.1.123.ebuild:
  Stable on ppc wrt bug 198574

  09 Nov 2007; Raúl Porcel <armin76@gentoo.org> gvim-7.1.123.ebuild:
  alpha/ia64/x86 stable wrt #198574

  09 Nov 2007; Ferris McCormick <fmccor@gentoo.org> gvim-7.1.123.ebuild:
  Sparc stable --- Bug #198574

  30 Oct 2007; Jeroen Roovers <jer@gentoo.org> gvim-7.1.123.ebuild:
  Stable for HPPA.

  10 Oct 2007; Christian Faulhammer <opfer@gentoo.org> gvim-6.4.ebuild,
  gvim-7.0.235.ebuild, gvim-7.1.042.ebuild, gvim-7.1.123.ebuild:
  remove PROVIDE=virtual/editor as we have now a new-style virtual

*gvim-7.1.123 (27 Sep 2007)

  27 Sep 2007; Ali Polatel <hawking@gentoo.org> +files/gvim.desktop-r1,
  -files/gvimrc, -gvim-7.0.174.ebuild, -gvim-7.1.ebuild,
  -gvim-7.1-r1.ebuild, -gvim-7.1.002.ebuild, -gvim-7.1.028.ebuild,
  -gvim-7.1.087.ebuild, +gvim-7.1.123.ebuild:
  Version bump. Drop old. Added new gvim.desktop file for bug 190289, thanks
  to Chidambar Zinnoury.

*gvim-7.1.116 (18 Sep 2007)

  18 Sep 2007; Ali Polatel <hawking@gentoo.org> +files/gvim.desktop-r1,
  +gvim-7.1.116.ebuild:
  version bump. use gvim -f %F in gvim.desktop (bug 190289)

*gvim-7.1.087 (23 Aug 2007)

  23 Aug 2007; Ali Polatel <hawking@gentoo.org> +gvim-7.1.087.ebuild:
  Version bump.

  01 Aug 2007; Brent Baude <ranger@gentoo.org> gvim-7.1.042.ebuild:
  Marking 7.1.042 ppc and ppc64 stable for bug 185677

  01 Aug 2007; Raúl Porcel <armin76@gentoo.org> gvim-7.1.042.ebuild:
  alpha/ia64 stable wrt security #185677

  01 Aug 2007; Christian Faulhammer <opfer@gentoo.org> gvim-7.1.042.ebuild:
  stable x86, security bug 185677

  31 Jul 2007; Jeroen Roovers <jer@gentoo.org> gvim-7.1.042.ebuild:
  Stable for HPPA (bug #185677).
