@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/gvim
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/gvim/ChangeLog,v 1.255 2007/11/09 22:26:57 nixnut Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-editors/cvs-repo/gentoo-x86/app-editors/gvim/ChangeLog,v 1.256 2007/11/10 19:11:36 dang Exp $
+
+  10 Nov 2007; Daniel Gryniewicz <dang@gentoo.org> gvim-7.1.123.ebuild:
+  Marked stable on amd64 for bug #198574
 
   09 Nov 2007; nixnut <nixnut@gentoo.org> gvim-7.1.123.ebuild:
   Stable on ppc wrt bug 198574
